fixed search bar padding
search bar was too far over 960 grid container on index pages, removed padding fixed issue, interior pages look similar.

--- a/UC Skin/Skins/UniversityCollege/skin.css
+++ b/UC Skin/Skins/UniversityCollege/skin.css
@@ -2387,7 +2387,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     float: left;
     width: 168px;
     height: 25px;
-    padding: 0 5px 0 10px;
+    padding: 0;
     margin: 0;
     background-color: #f8f3d2;
     border: none;
